# investment-thesis-validator

./: .env.example  .gitignore  main.py  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  eval.yml
docs/: RUNBOOK.md  baseline_2026-05-15.md  baseline_full_v1.md  design_doc.md  dspy_postmortem.md  handtune_v2_2026-05-15.md
eval/: REVIEW_CHECKLIST.md  cli.py  dspy_compile.py  generate_seed.py  generator_system.md  metrics.py  report.py  runner.py  schema.py
eval/datasets/: _diagnostic_supported.jsonl  golden_v1.jsonl  golden_v1_candidates.jsonl  golden_v1_seed.jsonl
infra/: docker-compose.yml  prometheus.yml
infra/grafana/dashboards/: itv.json
scripts/: dashboard_up.sh
src/: config.py
src/agent/: graph.py  llm.py  state.py
src/agent/nodes/: contradiction.py  fetch_filings.py  fetch_news.py  fetch_stock.py  parse_thesis.py  plan_evidence.py  synthesize.py
src/agent/optimized/: contradiction_signature.py  synthesize_signature.py
src/agent/prompts/: contradiction.md  parse_thesis.md  plan_evidence.md  synthesizer_system.md
src/api/: jobs.py  main.py  metrics.py  schemas.py
src/guardrails/: citation_binding.py  numeric_check.py
src/ingestion/: _http.py  fmp.py  news.py  sec.py
tests/: conftest.py  test_config.py  test_dspy_signatures.py  test_eval_metrics.py  test_eval_runner.py  test_eval_schema.py  test_guardrails.py
tests/agent/: conftest.py  test_graph_smoke.py  test_llm.py  test_parse_thesis.py  test_plan_evidence.py
tests/api/: test_metrics.py  test_validate.py
tests/ingestion/: test_fmp.py  test_news.py  test_sec.py
(+2 files in other folders)
